base/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: valkey-admin-app
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Monitor, manage, and interact with Valkey instances
    gethomepage.dev/group: Data
    gethomepage.dev/name: Valkey Admin
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: external-http-gateway
      namespace: istio-ingress
  hostnames: []
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - group: ''
          kind: Service
          name: valkey-admin-app
          port: 8080
          weight: 1
